<resources>
    <string name="app_name">Restaurants</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="inspections">Inspections</string>
    <string name="surrey_restaurant_list">Surrey Restaurant List</string>
    <string name="rest_icon">rest icon</string>
    <string name="restaurant_city">City</string>
    <string name="restaurant_hazardlevel">Hazard Level: </string>
    <string name="restaurant_issuesfound">Issues: </string>
    <string name="restaurant_address">Address: </string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rate_icon">rate icon</string>
<!--    <string name="restaurant_hazardLevel">Hazard Level: %s</string>-->
    <string name="restaurant_hazardLevelHigh_value">High</string>
    <string name="restaurant_hazardLevelModerate_value">Moderate</string>
    <string name="restaurant_hazardLevelLow_value">Low</string>
    <string name="restaurant_hazardLevelNo_value">Unknown</string>
    <string name="restaurant_inspectionPerformedOn">Last Inspection: </string>
<!--    <string name="restaurant_noInspectionAvailable_value">Unknown</string>-->
<!--    <string name="restaurant_info">Address: %s, %s\nGPS: %s</string>-->
    <string name="restaurant_detail">Restaurant Details</string>
    <string name="low">LOW</string>
    <string name="moderate">MODERATE</string>
    <string name="high">HIGH</string>
    <string name="critical_issues"> Critical issues: </string>
    <string name="non_critical_issues"> Non-critical issues: </string>
<!--    <string name="hazard_level">| Hazard level:</string>-->
    <string name="title_activity_message_fragment">MessageFragment</string>
    <string name="num_critical">"Critical: "</string>
    <string name="num__non_critical">"Non Critical: "</string>
    <string name="inspection_detail">Inspection Detail</string>
    <string name="updateText">There is a new update available, would you like to update?</string>
    <string name="title_activity_maps">Map</string>
    <string name="restaurantName">"Name: "</string>
    <string name="restaurantAddress">"Address: "</string>
<!--    <string name="restaurantHazard">"Hazard: "</string>-->
    <string name="restaurant_summary_info">Tap to go to view restaurant details</string>
    <string name="map_view">Map View</string>
    <string name="update">Update?</string>
    <string name="waiting">Please wait…</string>
    <string name="cancel_download">Cancel download</string>
    <string name="violation_details">Violation Details</string>
    <string name="unknown">unknown</string>
    <string name="list_view">List View</string>
    <string name="never">never</string>
    <string name="food">Food</string>
    <string name="pests">Pests</string>
    <string name="hygiene">Hygiene</string>
    <string name="chemical">Chemical</string>
    <string name="location">Location</string>
    <string name="equipment">Equipment</string>
    <string name="containers">Containers</string>
    <string name="requirements">Requirements</string>
    <string name="no_type">No type</string>
    <string name="favouriteselection">favouriteSelection</string>
    <string name="favorite_restaurants_with_new_inspections">New Updates from Favourites: </string>
    <string name="ok">Ok</string>
    <string name="filter_by">Filter by:</string>
    <string name="hazard">Hazard</string>
    <string name="violations">Violations</string>
    <string name="favourites">Favourites</string>
    <string name="hazard_level_of_the_latest_inspection">Hazard level of the latest inspection</string>
    <string name="low_hazard">Low</string>
    <string name="high_hazard">High</string>
    <string name="moderate_hazard">Moderate</string>
    <string name="none_hazard">Aucun danger</string>
    <string name="low_content_description">Danger faible</string>
    <string name="moderate_content_description">Danger modéré</string>
    <string name="high_content_description">Danger haut</string>
    <string name="text_hint">Number of critical violations</string>
    <string name="length_zero">Enter a valid number</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter</string>
    <string name="number_of_critical_violations_in_the_past_year">Number of critical violations in the past year</string>

</resources>