<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/restaurant_image_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/rest_icon"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        app:srcCompat="@drawable/restaurant_logo"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/restaurant_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/restaurant_image_icon"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/restaurant_image_icon"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/restaurant_name"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_label_name"
        android:layout_alignStart="@id/restaurant_label_name"
        android:text="@string/restaurant_address"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/restaurant_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/restaurant_address"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@id/restaurant_address"
        android:text="@string/restaurant_city"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/restaurant_problemsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_image_icon"
        android:layout_alignStart="@id/restaurant_image_icon"
        android:layout_marginStart="5dp"
        android:text="@string/restaurant_issuesfound"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/restaurant_hazardLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/restaurant_image_hazardLevelValue"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/restaurant_image_hazardLevelValue"
        android:text="@string/restaurant_hazardlevel"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/restaurant_image_hazardLevelValue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/restaurant_problemsFound"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/rate_icon"
        app:srcCompat="@drawable/low_risk"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/restaurant_label_latestInspection"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_image_hazardLevelValue"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/restaurant_inspectionPerformedOn"
        android:textAlignment="viewEnd"
        android:textSize="14sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/restaurant_label_latestInspectionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_hazardLevel"
        android:layout_marginEnd="24dp"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_label_latestInspection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurant_label_latestInspection"
        tools:ignore="RtlCompat" />

</RelativeLayout>
